--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("./imgs/sleeping.jpg");
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-color: beige;
 }
