--- a/src/components/profile/analyses/analyses.css
+++ b/src/components/profile/analyses/analyses.css
@@ -1,11 +1,12 @@
 .dream-plots-wrapper {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: row;
+        justify-content: center;
         background-color: rgba(232, 232, 226, 0.731);
         border-color: black;
         padding: 5%;
-        margin-top: 4%;
-        margin-left: 4%;
-        margin-right: 4%;
-        margin-bottom: 10%;
+        margin-top: 4em;
+        margin-left: 25em;
+        margin-right: 25em;
+        margin-bottom: 20em;
 }
